feat(./src/modules/option): you can now update exisiting option
