# src/modules/option/option.routes.ts
@@ -1,6 +1,6 @@
+import removeEmpty from '$middlewares/removeEmpty.middleware';
 import { Router } from 'express';
 import optionController from './option.controller';
-import removeEmpty from '$middlewares/removeEmpty.middleware';
 
 const router = Router();
 
@@ -10,5 +10,6 @@ router.get('/for/:categoryId', optionController.findByCategoryId);
 router.get('/for/slug/:categorySlug', optionController.findByCategorySlug);
 router.get('/:optionId', optionController.findById);
 router.delete('/:optionId', optionController.deleteById);
+router.put('/:optionId', optionController.update);
 
 export default router;
